# cpi-retail-benchmark

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  DEPLOYMENT.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements-production.txt  requirements.txt  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml
api/: debug.py  diagnostic.py  index.py  minimal.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  bls_routes.py  processing_routes.py  scraper_routes.py  simple_bls.py  simple_health.py  storage_routes.py
app/bls_client/: __init__.py  client.py  exceptions.py
app/data_processing/: __init__.py  calculations.py  processors.py  storage.py  validators.py
app/db/: __init__.py  crud.py  database.py  models.py
app/models/: __init__.py  bls_models.py
app/scrapers/: __init__.py  base.py  manager.py  target.py
docs/: backend.md  prd.md  prompt.md  todo.md  ui.md
frontend/: README.md  index.html  script.js  styles.css
tests/: __init__.py  test_basic.py  test_data_processing.py  test_database.py  test_scrapers.py
